--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -12,4 +12,5 @@
 	<% end %>
 	<p><%= portfolio_item.body %></p>
 	<%= link_to "Edit Portfolio Item", edit_portfolio_path(portfolio_item.id) %>
+	<%= link_to "Delete Portfolio Item", portfolio_path(portfolio_item.id), method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
