--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -6,3 +6,11 @@
 </hgroup>
 
 <p><%= @portfolio_item.body %></p>
+
+<h2>Technologies Used</h2>
+
+<ul>
+	<% @portfolio_item.technologies.each do |technology| %>
+		<li><%= technology.name %></li>
+	<% end %>
+</ul>
