--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
-<p>Hi, <%= current_user.first_name %></p>
+<% if current_user %>
+	<p>Hi, <%= current_user.first_name %></p>
+<% end %>
 <h1>Homepage</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
