--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -2,15 +2,4 @@
 
 <%= link_to "Create New Portfolio Item", new_portfolio_path %>
 
-<% @portfolio_items.each do |portfolio_item| %>
-	<hgroup>
-		<h2><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id) %></h2>
-		<h3><%= portfolio_item.subtitle %></h3>
-	</hgroup>
-	<% if !portfolio_item.thumb_image.nil? %>
-		<img src=<%= portfolio_item.thumb_image %>/>
-	<% end %>
-	<p><%= portfolio_item.body %></p>
-	<%= link_to "Edit Portfolio Item", edit_portfolio_path(portfolio_item.id) %>
-	<%= link_to "Delete Portfolio Item", portfolio_path(portfolio_item.id), method: :delete, data: { confirm: 'Are you sure?' } %>
-<% end %>
+<% render partial: 'portfolio_item', collection: @portfolio_items %>
