--- a/app/views/portfolios/rails_items.html.erb
+++ b/app/views/portfolios/rails_items.html.erb
@@ -11,6 +11,6 @@
 		<img src=<%= portfolio_item.thumb_image %>/>
 	<% end %>
 	<p><%= portfolio_item.body %></p>
-	<%= link_to "Edit Portfolio Item", edit_portfolio_path(portfolio_item.id) %>
-	<%= link_to "Delete Portfolio Item", portfolio_path(portfolio_item.id), method: :delete, data: { confirm: 'Are you sure?' } %>
+	<%= link_to "Edit Portfolio Item", edit_portfolio_path(portfolio_item.id) if logged_in?(:site_admin) %>
+	<%= link_to "Delete Portfolio Item", portfolio_path(portfolio_item.id), method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
 <% end %>
