--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,17 +14,16 @@
   </head>
 
   <body class="text-center">
-  	<p class="notice"><%= notice %></p>
-  	<p class="alert"><%= alert %></p>
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <%= render "shared/application_nav" %>
 
-    <%= render "shared/nav", location: 'top' %>
+      <%= login_helper %>
 
-    <%= login_helper %>
+      <%= yield %>
 
-    <%= yield %>
+      <%= source_helper('application') %>
 
-    <%= source_helper('application') %>
-
-    <%= copyright_helper %>
+      <%= copyright_helper %>
+    </div>
   </body>
 </html>
