--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,13 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<main role="main" class="inner cover">
+  <h1 class="cover-heading">Contact Me</h1>
+  <p class="lead">
+	  <address>
+	  	Marcus E. W. Germano, IV<br/>
+	  	310 7th Street, Apt 2<br/>
+	  	Altoona, PA 16602<br/>
+	  	<br/>
+	  	Phone: <%= link_to "(814) 631-0533", "tel:+1814-631-0533" %><br/>
+	  	Email: <%= link_to "sorucoder@gmail.com", "mailto:sorucoder@gmail.com" %><br/>
+	  </address>
+	</p>
+ </main>
