--- a/app/views/shared/_application_header.html.erb
+++ b/app/views/shared/_application_header.html.erb
@@ -1,12 +1,13 @@
 <header class="masthead mb-auto">
   <div class="inner">
-    <h3 class="masthead-brand">Marcus Germano, IV</h3>
+    <h3 class="masthead-brand">Marcus E. W. Germano, IV</h3>
     <nav class="nav nav-masthead justify-content-center">
     	<%= link_to "Home", root_path, class: "nav-link active" %>
       <%= link_to "About Me", about_me_path, class: "nav-link" %>
       <%= link_to "Contact", contact_path, class: "nav-link" %>
       <%= link_to "Blogs", blogs_path, class: "nav-link" %>
       <%= link_to "Portfolio", portfolios_path, class: "nav-link" %>
+      <%= login_helper "nav-link" %>
     </nav>
   </div>
 </header>
