Finished initial styling of devise pages

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -40,7 +40,7 @@
               <%= f.submit "Sign up", class: 'btn btn-primary btn-block' %>
             </div>
 
-            <div class="auth-links auth-links-right">
+            <div class="auth-links text-right">
               <%= render "devise/shared/links" %>
             </div>
           </div>
