--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,26 @@
-<h2>Forgot your password?</h2>
+<main role="main">
+	<div class="login">
+		<div class="card">
+			<div class="card-body">
+				<h2>Forgot Your Password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+				<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+				  <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+				  <div class="form-group">
+				    <%= f.label :email %><br />
+				    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+				  </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+				  <div class="form-group">
+				    <%= f.submit "Send Me Reset Password Instructions", class: 'btn btn-primary btn-block' %>
+				  </div>
+				<% end %>
 
-<%= render "devise/shared/links" %>
+				<div class="auth-links">
+					<%= render "devise/shared/links" %>
+				</div>
+			</div>
+		</div>
+	</div>
+</main>
