--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    
+
     <%= render "shared/blog_nav" %>
 
     <!-- start of blog header -->
@@ -22,19 +22,14 @@
       <div class="container">
         <h1 class="blog-title">The Bootstrap Blog</h1>
         <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+        <%= link_to "Write A New Blog", new_blog_path if logged_in?(:site_admin) %>
       </div>
     </header>
     <!-- end of blog header -->
 
-    <!-- start of container and row element -->
+    <!-- start of main content -->
     <main role="main" class="container">
-
       <div class="row">
-    <!-- start of container and row element -->
-
-
-
-        <%= login_helper %>
 
         <%= yield %>
 
@@ -71,20 +66,18 @@
           </div>
         </aside>
         <!-- end of sidebar -->
-
-        <!-- start of footer -->
-        <footer class="blog-footer">
-          <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-          <p>
-            <a href="#">Back to top</a>
-          </p>
-        </footer>
-        <!-- end of footer -->
-
-        <%= render "shared/nav", location: 'bottom' %>
-
-        <%= source_helper("blog") %>
       </div>
     </main>
+
+    <!-- start of footer -->
+    <footer class="blog-footer">
+      <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+      <p>
+        <a href="#">Back to top</a>
+      </p>
+    </footer>
+    <!-- end of footer -->
+
+    <%= source_helper("blog") %>
   </body>
 </html>
