Integrated styles for blog pages

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,14 +1,15 @@
-<p id="notice"><%= notice %></p>
+<div class="col-sm-8 blog-main">
+  <h2 class="blog-post-title"><%= @blog.title %></h2>
+  <p class="blog-post-meta">Written <%= distance_of_time_in_words(@blog.created_at, Time.now) %> ago</p> 
+  <% if logged_in?(:site_admin) %>
+  	<p class="blog-post-meta">
+  		<%= link_to @blog.status.capitalize, toggle_status_blog_path(@blog) %> / 
+		  <%= link_to 'Edit', edit_blog_path(@blog) %> / 
+			<%= link_to 'Delete', @blog, method: :delete, data: { confirm: 'Are you sure?' } %>
+  	</p>
+  <% end %>
 
-<p>
-  <strong>Title:</strong>
-  <%= @blog.title %>
-</p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @blog.body %>
-</p>
-
-<%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin) %> 
-<%= link_to 'Back', blogs_path %>
+  <p>
+  	<%= @blog.body %>
+  </p>
+</div>
