--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -17,17 +17,8 @@
 
     <%= render "shared/blog_nav" %>
 
-    <!-- start of blog header -->
-    <header class="blog-header">
-      <div class="container">
-        <h1 class="blog-title">The Bootstrap Blog</h1>
-        <p class="lead blog-description">An example blog template built with Bootstrap.</p>
-        <%= link_to "Write A New Blog", new_blog_path if logged_in?(:site_admin) %>
-      </div>
-    </header>
-    <!-- end of blog header -->
+    <%= render "shared/blog_header" %>
 
-    <!-- start of main content -->
     <main role="main" class="container">
       <div class="row">
 
@@ -37,14 +28,7 @@
       </div>
     </main>
 
-    <!-- start of footer -->
-    <footer class="blog-footer">
-      <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-      <p>
-        <a href="#">Back to top</a>
-      </p>
-    </footer>
-    <!-- end of footer -->
+    <%= render "shared/blog_footer" %>
 
     <%= source_helper("blog") %>
   </body>
