--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -1,31 +1,14 @@
 <aside class="col-sm-3 offset-sm-1 blog-sidebar">
   <div class="sidebar-module sidebar-module-inset">
     <h4>About</h4>
-    <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-  </div>
-  <div class="sidebar-module">
-    <h4>Archives</h4>
-    <ol class="list-unstyled">
-      <li><a href="#">March 2014</a></li>
-      <li><a href="#">February 2014</a></li>
-      <li><a href="#">January 2014</a></li>
-      <li><a href="#">December 2013</a></li>
-      <li><a href="#">November 2013</a></li>
-      <li><a href="#">October 2013</a></li>
-      <li><a href="#">September 2013</a></li>
-      <li><a href="#">August 2013</a></li>
-      <li><a href="#">July 2013</a></li>
-      <li><a href="#">June 2013</a></li>
-      <li><a href="#">May 2013</a></li>
-      <li><a href="#">April 2013</a></li>
-    </ol>
+    <p>This page is dedicated to my more personal interests, hobbies, and life events, outside of programming. These blogs may contain content that may be considered controversial. If you find that some content is not your cup of tea, you are welcome to leave a comment. Just remember to keep it constructive and have an open mind.</p>
   </div>
   <div class="sidebar-module">
     <h4>Elsewhere</h4>
-    <ol class="list-unstyled">
-      <li><a href="#">GitHub</a></li>
-      <li><a href="#">Twitter</a></li>
-      <li><a href="#">Facebook</a></li>
+    <ol class="list-unstyled social-links">
+      <li><%= link_to fa_icon("github"), "https://github.com/sorucoder" %></li>
+      <li><%= link_to fa_icon("facebook"), "https://www.facebook.com/marcus.germano/" %></li>
+      <li><%= link_to fa_icon("twitter"), "https://twitter.com/GermanoMarcus" %></li>
     </ol>
   </div>
 </aside>
