--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,12 +1,12 @@
-<hgroup>
-	<h2><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id) %></h2>
-	<h3><%= portfolio_item.subtitle %></h3>
-</hgroup>
+<article class="card">
+	<%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
+	
+	<hgroup>
+		<h5 class="card-title"><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id) %></h5>
+		<h6 class="card-subtitle"><%= portfolio_item.subtitle %></h6>
+	</hgroup>
 
-<% if !portfolio_item.thumb_image.nil? %>
-	<img src=<%= portfolio_item.thumb_image %>/>
-<% end %>
-
-<p><%= portfolio_item.body %></p>
-<%= link_to "Edit Portfolio Item", edit_portfolio_path(portfolio_item.id) if logged_in?(:site_admin) %>
-<%= link_to "Delete Portfolio Item", portfolio_path(portfolio_item.id), method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
+	<p class="card-text">
+		<%= portfolio_item.body %>
+	</p>
+</article>
