--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,12 +1,4 @@
-<article class="card">
-	<%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
-	
-	<hgroup>
+<div class="card">
+		<%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
 		<h5 class="card-title"><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id) %></h5>
-		<h6 class="card-subtitle"><%= portfolio_item.subtitle %></h6>
-	</hgroup>
-
-	<p class="card-text">
-		<%= portfolio_item.body %>
-	</p>
-</article>
+</div>
