--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -58,3 +58,13 @@ footer {
 footer p {
   margin-bottom: .25rem;
 }
+
+/*
+ * Custom Styles
+ */
+
+.portfolio-title h2 {
+  font-size: 1.5rem;
+  font-style: italic;
+  font-weight: normal;
+}
