--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -15,7 +15,7 @@
   <body>
     <%= render "shared/portfolio_nav" %>
 
-    <%= render "shared/portfolio_header" %>
+    <%= render "shared/portfolio_header" unless logged_in?(:site_admin) %>
 
     <%= yield %>
 
