--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">About</h4>
-          <p class="text-muted">This entire site is my first major public programming project. Here you'll find a catalog of all the projects I've been working on, in addition to my personal interests and thoughts. Feel free to explore to your heart's content!</p>
+          <p class="text-muted">This entire site is my first major public programming project. Along with the entire site, here in my portfolio you will find all of my other programming projects.</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Explore</h4>
