--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,6 +1,6 @@
 <section class="album text-muted">
   <div class="container">
-    <div class="row">
+    <div class="row sortable">
       <%= render partial: 'portfolio_item', collection: @portfolio_items %>
     </div>
   </div>
