Updated images for about me page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,12 @@
 <main role="main" class="inner cover">
-  <h1 class="cover-heading">About Me</h1>
-  <p class="lead">My name is Marcus E. W. Germano, IV. I go by the username "SoruCoder" on the Internet. I currently reside  in Altoona, Pennsylvania, but I know the Lord has great plans for my life.</p>
-  <p class="lead">I'm a self-taught programmer that started on HTML way back in 2004. Since then I have dabbled in CSS, Javascript, C#, Java, and many more. Right now I am focused on Ruby on Rails for semi-professional work, and using C and FreeBASIC in my free time. I plan to tackle Go, C++, and some other web-related technologies in the future.</p>
-  </main>
+	<h1 class="cover-heading">About Me</h1>
+	<div class="row">
+		<div class="col-md-4">
+			<%= image_tag "sorucoder.png", width: 300, alt: "Profile picture" %>
+		</div>
+		<div class="col-md-8">
+  		<p class="lead">My name is Marcus E. W. Germano, IV. I go by the username "SoruCoder" on the Internet. I currently reside  in Altoona, Pennsylvania, but I know the Lord has great plans for my life.</p>
+  		<p class="lead">I'm a self-taught programmer that started on HTML way back in 2004. Since then I have dabbled in CSS, Javascript, C#, Java, and many more. Right now I am focused on Ruby on Rails for semi-professional work, and using C and FreeBASIC in my free time. I plan to tackle Go, C++, and some other web-related technologies in the future.</p>
+  	</div>
+  </div>
+</main>
