--- a/app/views/shared/_application_footer.html.erb
+++ b/app/views/shared/_application_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="mastfoot mt-auto">
   <div class="inner">
-    <p><%= copyright_helper %></p>
+    <p class="text-white"><%= copyright_helper %></p>
   </div>
 </footer>
