--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -12,11 +12,15 @@
       </div>
 
       <div class="form-group">
-        <%= form.file_field :main_image %>
+        <label class="btn btn-secondary">
+          Upload Main Image <%= form.file_field :main_image, style: "display: none;" %>
+        </label>
       </div>
 
       <div class="form-group">
-        <%= form.file_filed :thumb_image %>
+        <label class="btn btn-secondary">
+          Upload Thumbnail Image <%= form.file_field :thumb_image, style: "display: none;" %>
+        </label>
       </div>
     </div>
     <div class="col-md-6">
