--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,4 +1,4 @@
 <div class="card" data-id="<%= portfolio_item.id %>">
-		<%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
+		<%= image_tag portfolio_image_helper(portfolio_item.thumb_image, :thumb) %>
 		<h5 class="card-title"><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id) %></h5>
 </div>
