--- a/app/views/shared/_blog_header.html.erb
+++ b/app/views/shared/_blog_header.html.erb
@@ -1,7 +1,7 @@
 <header class="blog-header">
   <div class="container">
-    <h1 class="blog-title">The Bootstrap Blog</h1>
-    <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+    <h1 class="blog-title">SoruCoder's Blog</h1>
+    <p class="lead blog-description">Tasty foods for thought. Cook's not always in the kitchen though.</p>
     <%= link_to "Write A New Blog", new_blog_path if logged_in?(:site_admin) %>
   </div>
 </header>
