--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -12,13 +12,11 @@
   <% end %>
 
   <div class="form-group">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :blog_title, class: 'form-control' %>
+    <%= form.text_field :title, id: :blog_title, placeholder: "Title", class: 'form-control' %>
   </div>
 
   <div class="form-group">
-    <%= form.label :body %>
-    <%= form.text_area :body, id: :blog_body, class: 'form-control', rows: 15 %>
+    <%= form.text_area :body, id: :blog_body, placeholder: "Content", class: 'form-control', rows: 15 %>
   </div>
 
   <div class="form-group">
