Integrated cocoon for portfolio item technologies

--- a/app/views/shared/_portfolio_header.html.erb
+++ b/app/views/shared/_portfolio_header.html.erb
@@ -4,7 +4,7 @@
     <p class="lead text-muted">My collection of programming projects I've been working on...</p>
     <p>
     	<%= link_to "Learn More About Me", about_me_path, class: "btn btn-primary" %>
-    	<%= link_to "Check Out My Blogs Instead", blogs_path, class: "btn btn-secondary" %>
+    	<%= link_to "Check Out My Blog Instead", blogs_path, class: "btn btn-secondary" %>
     </p>
   </div>
 </header>
