--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,4 +1,10 @@
 <%= form_for(@portfolio_item) do |f| %>
+  <% if @portfolio_item.errors.any? %>
+    <% @portfolio_item.errors.full_messages.each do |message| %>
+      <%= js add_gritter(message, title: "Marcus Germano, IV Portfolio", sticky: false) %>
+    <% end %>
+  <% end %>
+  
   <h3>General Information</h3>
   <div class="row">
     <div class="col-md-6">
