Implemented styles for tech news page and added link for it to the navigation bar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -148,3 +148,16 @@ body {
   background-size: cover;
 }
 
+.tech-news-tweet {
+  color: black;
+  margin: 20px;
+}
+
+.tech-news-tweet > .card {
+  padding: 30px;
+}
+
+.tech-news-tweet a {
+  color: blue;
+}
+
