--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -8,8 +8,20 @@
 			<%= link_to 'Delete', @blog, method: :delete, data: { confirm: 'Are you sure?' } %>
   	</p>
   <% end %>
+  <p><%= @blog.body %></p>
 
-  <p>
-  	<%= @blog.body %>
-  </p>
+  <hr />
+
+  <% unless current_user.is_a?(GuestUser) %>
+    <%= form_for(@comment, url: '#') do |f| %>
+      <div class="form-group">
+        <%= f.label :content %>
+        <%= f.text_area :content, class: "form-control" %>
+      </div>
+
+      <%= f.submit "Post Comment", class: "btn btn-primary" %>
+    <% end %>
+  <% end %>
+
+  <%= render @blog.comments %>
 </div>
