--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -159,6 +159,7 @@ h6, .h6 {
  */
 
 .blog-footer {
+  margin-top: 20px;
   padding: 2.5rem 0;
   color: #999;
   text-align: center;
@@ -175,4 +176,18 @@ h6, .h6 {
 
 .social-links li {
   font-size: 1.5em;
+}
+
+.comment > .card {
+  margin-top: 15px;
+  padding: 10px;
+}
+
+.comment-attribution {
+  font-size: 0.8em;
+  font-style: italic;
+}
+
+.comment-user-name {
+  font-weight: 600;
 }
