Refactored styles for gritter alerts

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -191,3 +191,11 @@ h6, .h6 {
 .comment-user-name {
   font-weight: 600;
 }
+
+.gritter-item .gritter-title {
+  font-size: 1.75em;
+}
+
+.gritter-item p {
+  font-size: 1.5em;
+}
