--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -74,3 +74,11 @@ footer p {
 .portfolio-container {
   padding-top: 1em;
 }
+
+.gritter-item .gritter-title {
+  font-size: 1.75em;
+}
+
+.gritter-item p {
+  font-size: 1.5em;
+}
