--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: blog, local: true) do |form| %>
+<%= form_with(model: blog, local: true) do |f| %>
   <% if blog.errors.any? %>
     <% blog.errors.full_messages.each do |message| %>
       <%= alert_helper(message) %>
@@ -6,14 +6,29 @@
   <% end %>
 
   <div class="form-group">
-    <%= form.text_field :title, id: :blog_title, placeholder: "Title", class: 'form-control' %>
+    <%= f.text_field :title, id: :blog_title, placeholder: "Title", class: 'form-control' %>
   </div>
 
   <div class="form-group">
-    <%= form.text_area :body, id: :blog_body, placeholder: "Content", class: 'form-control', rows: 15 %>
+    <%= f.label :topic_id %>
+    <%= f.collection_select(
+            :topic_id,
+            Topic.all,
+            :id,
+            :title,
+            {
+              selected: blog.topic.id,
+              include_blank: true,
+            },
+            class: "form-control"
+    ) %>
   </div>
 
   <div class="form-group">
-    <%= form.submit class: 'btn btn-primary' %>
+    <%= f.text_area :body, id: :blog_body, placeholder: "Content", class: 'form-control', rows: 15 %>
+  </div>
+
+  <div class="form-group">
+    <%= f.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
