Fully implemented CRUD for topics and fixed title helper for the last time

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -199,3 +199,12 @@ h6, .h6 {
 .gritter-item p {
   font-size: 1.5em;
 }
+
+.topic-list {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 1.25em;
+}
+
+.topic-list a:hover {
+  text-decoration: none;
+} 
