--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -6,7 +6,8 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.text_field :title, id: :blog_title, placeholder: "Title", class: 'form-control' %>
+    <%= f.label :title %>
+    <%= f.text_field :title, id: :blog_title, class: 'form-control' %>
   </div>
 
   <div class="form-group">
@@ -25,7 +26,8 @@
   </div>
 
   <div class="form-group">
-    <%= f.text_area :body, id: :blog_body, placeholder: "Content", class: 'form-control', rows: 15 %>
+    <%= f.label :body %>
+    <%= f.text_area :body, id: :blog_body, class: 'form-control', rows: 15 %>
   </div>
 
   <div class="form-group">
