Added radio buttons for blog status

--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -26,6 +26,20 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :status, "Status" %>
+    <div id="blog_status">
+      <div class="form-check form-check-inline">
+        <%= f.radio_button :status, "draft", id: "blog_status_draft", class: "form-check-input" %>
+        <%= f.label "status_draft", "Draft", class: "form-check-label" %>
+      </div>
+      <div class="form-check form-check-inline">
+       <%= f.radio_button :status, "published", id: "blog_status_published", class: "form-check-input" %>
+       <%= f.label "status_published", "Published", class: "form-check-label" %>
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group">
     <%= f.label :body %>
     <%= f.text_area :body, id: :blog_body, class: 'form-control', rows: 15 %>
   </div>
