--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,5 +1,5 @@
 <article class="blog-post">
-	<h2 class="blog-post-title"><%= link_to blog.title.upcase, blog %></h2>
+	<h2 class="blog-post-title display"><%= link_to blog.title.upcase, blog %></h2>
 	<p class="blog-post-meta">Written <%= distance_of_time_in_words(blog.created_at, Time.now) %> ago</p>
 	<% if logged_in?(:site_admin) %>
 		<p class="blog-post-meta">
@@ -9,7 +9,7 @@
 		</p>
 	<% end %>
 
-	<p>
-		<%= blog.body %> 
-	</p>
+	<section class="blog-body">
+		<%= markdown blog.body %> 
+	</section>
 </article>
