--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,5 +1,6 @@
 <div class="col-sm-8 blog-main">  
-	<h2 class="blog-post-title">Topics</h2>
+	<h2 class="topic-title">Topics</h2>
+	<hr />
 	<div class="list-group" id="topic-list">
 		<%= render @topics %>
 	</div>
