--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -92,7 +92,7 @@ h6, .h6 {
 }
 .blog-title {
   margin-bottom: 0;
-  font-size: 2rem;
+  font-size: 3.25rem;
   font-weight: normal;
 }
 .blog-description {
@@ -102,8 +102,12 @@ h6, .h6 {
 
 @media (min-width: 40em) {
   .blog-title {
-    font-size: 3.5rem;
+    font-size: 3.75rem;
   }
+}
+
+.topic-title {
+  font-size: 3rem;
 }
 
 
