--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,19 +1,18 @@
 <div class="col-sm-8 blog-main">
+  <h2 class="blog-post-title"><%= @blog.title %></h2>
   <nav class="breadcrumb">
     <%= link_to "Home", root_path, class: "breadcrumb-item" %>
     <%= link_to @blog.topic.title, topic_path(@blog.topic), class: "breadcrumb-item" %>
     <span class="breadcrumb-item"><%= @blog.title %></span>
-  </nav>
 
-  <h2 class="blog-post-title"><%= @blog.title %></h2>
-  <p class="blog-post-meta">Written <%= distance_of_time_in_words(@blog.created_at, Time.now) %> ago 
     <% if logged_in?(:site_admin) %>
-      <br />
-  		<%= link_to @blog.status.capitalize, toggle_status_blog_path(@blog) %> / 
-		  <%= link_to 'Edit', edit_blog_path(@blog) %> / 
-			<%= link_to 'Delete', @blog, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <span class="ml-auto">
+        <%= link_to fa_icon("edit"), edit_blog_path(@blog) %> 
+        <%= link_to fa_icon("trash"), @blog, method: :delete, data: { confirm: "Are you sure?" } %>
+      </span>
     <% end %>
-  </p>
+  </nav>
+  <p class="blog-post-meta">Written <%= distance_of_time_in_words(@blog.created_at, Time.now) %> ago</p>
   
   <hr />
 
