Refactored source helper

--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -3,6 +3,7 @@
     <h4>About</h4>
     <p>This page is dedicated to my more personal interests, hobbies, and life events, outside of programming. These blogs may contain content that may be considered controversial. If you find that some content is not your cup of tea, you are welcome to leave a comment. Just remember to keep it constructive and have an open mind.</p>
   </div>
+  <%= source_helper("sidebar-module alert alert-primary") %>
   <div class="sidebar-module sidebar-module-inset">
     <h4>Topics</h4>
     <ul class="list-unstyled" id="sidebar-topic-list">
