--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -9,7 +9,7 @@
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Explore</h4>
           <ul class="list-unstyled">
-            <%= nav_helper "text-white", parentTag: "li" %>
+            <%= nav_helper "text-white", parent_tag: "li" %>
           </ul>
         </div>
       </div>
