--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container portfolio-container">
+<main role="main" class="container portfolio-container">
 	<div class="row">
 		<div class="col-md-7">
 			<%= image_tag portfolio_image_helper(@portfolio_item.main_image, :main), width: '100%' %>
@@ -31,4 +31,4 @@
 			</div>
 		<% end %>
 	</div>
-</div>
+</main>
