--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -111,6 +111,31 @@ body {
  * Custom Styles
  */
 
+.main-content {
+  color: black;
+  text-align: left;
+}
+
+.main-content > .card {
+  padding: 40px;
+}
+
+.main-content > .card a {
+  color: black;
+}
+
+.profile-image {
+  width: 100%;
+  box-shadow: 0px 0px 10px 5px #7F7F7F;
+  -webkit-box-shadow: 0px 0px 10px 5px #7F7F7F;
+  -moz-box-shadow: 0px 0px 10px 5px #7F7F7F;
+}
+
+.contact-map {
+  width: 100%;
+  height: 100%;
+}
+
 .card-body {
   color: black;
   text-align: left;
