--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -131,9 +131,14 @@ body {
   -moz-box-shadow: 0px 0px 10px 5px #7F7F7F;
 }
 
+.skills {
+  margin-top: 10px;
+}
+
 .contact-map {
   width: 100%;
   height: 100%;
+  border: 0;
 }
 
 .card-body {
