--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,16 @@
 @import "bootstrap";
 @import "gritter";
 
+@font-face {
+  font-family: 'Incosolata';
+  src: font-url('Incosolata-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Merriweather';
+  src: font-url('Merriweather-Regular.ttf');
+}
+
 /*
  * Globals
  */
@@ -36,12 +46,22 @@ body {
   display: -ms-flexbox;
   display: flex;
   color: #fff;
+  font-family: 'Incosolata', monospace;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
+  font-family: 'Merriweather', serif;
+}
+
 .cover-container {
-  max-width: 60em;
+  max-width: 70em;
 }
 
 
