--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -2,8 +2,28 @@
 @import "jquery-ui";
 @import "gritter";
 
+@font-face {
+  font-family: 'Incosolata';
+  src: font-url('Incosolata-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Merriweather';
+  src: font-url('Merriweather-Regular.ttf');
+}
+
 body {
+  font-family: 'Incosolata', monospace;
   min-height: 75rem; /* Can be removed; just added for demo purposes */
+}
+
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
+  font-family: 'Merriweather', serif;
 }
 
 .navbar {
