Fixed issue with @side_bar_topics

--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -18,7 +18,7 @@
             :id,
             :title,
             {
-              include_blank: true,
+              include_blank: true
             },
             class: "form-control"
     ) %>
