Fixed font bug. Implemented redis setup for heroku

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,8 +2,8 @@
 @import "gritter";
 
 @font-face {
-  font-family: 'Incosolata';
-  src: font-url('Incosolata-Regular.ttf');
+  font-family: 'Inconsolata';
+  src: font-url('Inconsolata-Regular.ttf');
 }
 
 @font-face {
