--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -3,8 +3,8 @@
 @import "gritter";
 
 @font-face {
-  font-family: 'Incosolata';
-  src: font-url('Incosolata-Regular.ttf');
+  font-family: 'Inconsolata';
+  src: font-url('Inconsolata-Regular.ttf');
 }
 
 @font-face {
