--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -2,5 +2,11 @@
 	<div class="card" data-id="<%= portfolio_item.id %>">
 		<%= image_tag portfolio_image_helper(portfolio_item.thumb_image, :thumb), width: '100%' %>
 		<h5 class="card-title"><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id) %></h5>
+		<% if logged_in?(:site_admin) %>
+			<nav>
+				<%= link_to fa_icon("edit"), edit_portfolio_path(portfolio_item) %> / 
+				<%= link_to fa_icon("trash"), portfolio_item, method: :delete, data: { confirm: "Are you sure?" } %>
+			</nav>
+		<% end %>
 	</div>
 </div>
