--- a/app/views/shared/_portfolio_footer.html.erb
+++ b/app/views/shared/_portfolio_footer.html.erb
@@ -5,7 +5,7 @@
     		<%= link_to "Create A New Portfolio Item", new_portfolio_path %> /
     	<% end %> 
     	<%= link_to "View All Portfolio Items", portfolios_path %> / 
-      <a href="#">Back to top</a>
+      <a href="#">Back To Top</a>
     </p>
     <%= copyright_helper %>
   </div>
