Added browse by topics link to blog

--- a/app/views/shared/_blog_header.html.erb
+++ b/app/views/shared/_blog_header.html.erb
@@ -6,5 +6,6 @@
     	<%= link_to "Write A New Blog", new_blog_path %> / 
     	<%= link_to "Create A New Topic", new_topic_path %>
     <% end %>
+    <%= link_to "Browse Topics", topics_path %>
   </div>
 </header>
