--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,8 +1,6 @@
 <article class="blog-post">
-	<h2 class="blog-post-title"><%= link_to blog.title.upcase, blog %></h2>
+	<h2 class="blog-post-title"><%= blog.title.upcase %></h2>
 	<p class="blog-post-meta">Written <%= distance_of_time_in_words(blog.created_at, Time.now) %> ago</p>
 	<%= render partial: "blogs/admin_actions", locals: { blog: blog } %>
-	<section class="blog-body">
-		<%= markdown blog.body %> 
-	</section>
+	<%= link_to "Click Here To Read", blog %>
 </article>
