--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -194,20 +194,6 @@ h6, .h6 {
   font-size: 1.5em;
 }
 
-.comment > .card {
-  margin-top: 15px;
-  padding: 10px;
-}
-
-.comment-attribution {
-  font-size: 0.8em;
-  font-style: italic;
-}
-
-.comment-user-name {
-  font-weight: 600;
-}
-
 .gritter-item .gritter-title {
   font-size: 1.75em;
 }
@@ -233,6 +219,32 @@ h6, .h6 {
   font-weight: bold;
 }
 
-.admin-links a {
+.blog-control-group:not(:last-child)::after {
+  content: " | ";
+}
+
+.blog-control-group-item {
+  padding: 0 5px;
+}
+
+.comment > .card {
+  margin-top: 15px;
+  padding: 10px;
+}
+
+.comment-attribution {
+  font-size: 0.8em;
+  font-style: italic;
+}
+
+.comment-user-name {
+  font-weight: 600;
+}
+
+.comment-control-group:not(:last-child)::after {
+  content: " | ";
+}
+
+.comment-control-group-item {
   padding: 0 5px;
 }
