--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -3,17 +3,29 @@
   <nav class="breadcrumb">
     <%= link_to "Home", root_path, class: "breadcrumb-item" %>
     <%= link_to @blog.topic.title, topic_path(@blog.topic), class: "breadcrumb-item" %>
-    <span class="breadcrumb-item admin-links">
-      <%= @blog.title %>
-
-      <% if logged_in?(:site_admin) %>
-        <%= link_to fa_icon("edit"), edit_blog_path(@blog), class: "ml-auto", style: "padding: 0 4px;" %> 
-        <%= link_to fa_icon("trash"), @blog, method: :delete, data: { confirm: "Are you sure?" }, style: "padding: 0 4px;" %>
-      <% end %>
-    </span>
+    <span class="breadcrumb-item"><%= @blog.title %></span>
   </nav>
-  <p class="blog-post-meta">Written <%= distance_of_time_in_words(@blog.created_at, Time.now) %> ago</p>
-  
+
+  <div class="blog-control">
+    <span class="blog-post-meta">Written <%= distance_of_time_in_words(@blog.created_at, Time.now) %> ago</span> | 
+
+    <% if logged_in?(:site_admin) %>
+      <span class="blog-control-group">
+        <%= link_to fa_icon("file-text"), toggle_status_blog_path(@blog), class: "blog-control-group-item", style: blog_status_color_helper(@blog) %>
+        <%= link_to fa_icon("edit"), edit_blog_path(@blog), class: "ml-auto", class: "blog-control-group-item", style: "padding: 0 4px;" %> 
+        <%= link_to fa_icon("trash"), @blog, method: :delete, data: { confirm: "Are you sure?" }, class: "blog-control-group-item", style: "padding: 0 4px;" %>
+      </span>
+    <% end %>
+
+    <% unless current_user.is_a?(GuestUser) %>
+      <span class="blog-control-group">
+        <%= link_to fa_icon("thumbs-up"), like_blog_path(@blog), class: "blog-control-group-item", style: like_color_helper(@blog) %>
+        <%= @blog.get_likes.size %>
+        <%= link_to fa_icon("thumbs-down"), dislike_blog_path(@blog), class: "blog-control-group-item", style: dislike_color_helper(@blog) %>
+        <%= @blog.get_dislikes.size %>
+      </span>
+    <% end %>
+  </div>
   <hr />
 
   <section class="blog-body">
